--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <app-root></app-root>
 
   
-  <script src="https://use.fontawesome.com/ffaf874dca.js"></script>
+  <script src="https://kit.fontawesome.com/549cd85808.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
